@@ -5,6 +5,9 @@ CHANGELOG
 1.3.5 (unreleased)
 ------------------
 
+- Improve prev. upgrade step by idexing only BillboardAds.
+  [mathias.leimgruber]
+
 - Added separate expiration date.
   [lknoepfel]
 
